##Copyright (C) 2020, Advanced Micro Devices, Inc.## 

target_sources("${PROJECT_NAME}"
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_apool.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_apool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_arch.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_arch.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_array.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_array.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_auxinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_blksz.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_blksz.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_check.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_check.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_clock.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_clock.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_cntl.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_cntl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_cntx.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_cntx.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_const.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_const.h
    #${CMAKE_CURRENT_SOURCE_DIR}/bli_cpuid.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_cpuid.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_env.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_env.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_error.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_error.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_func.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_func.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_getopt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_getopt.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_gks.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_gks.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_info.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_info.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_init.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_init.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_machval.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_machval.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_malloc.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_malloc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_mbool.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_mbool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_mem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_membrk.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_membrk.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_memsys.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_memsys.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_obj.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_obj.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_obj_scalar.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_obj_scalar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_opid.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_pack.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_pack.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_param_map.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_param_map.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_part.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_part.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_pool.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_pool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_prune.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_prune.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_query.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_query.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_rntm.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_rntm.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_sba.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_sba.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_setgetij.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_setgetij.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_setri.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_setri.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_string.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_string.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_winsys.c
    ${CMAKE_CURRENT_SOURCE_DIR}/bli_winsys.h
	)

#Add all subdirectories 
	add_subdirectory(cast)
	add_subdirectory(check)
	add_subdirectory(noopt)
	add_subdirectory(proj)	

